--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
     - name: Wait for a Message
       uses: soda480/wait-for-message-action@main
       with:
-        action: wait
+        command: wait
         port: 45678
         message: 'ready to proceed'
         timeout: 60
