--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,6 @@ jobs:
         command: wait
         port: 45678
         message: "ready to proceed"
-        timeout: 120
+        timeout: 30
+    - name: Continue
+      run: echo "Continue running..."
