--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,9 @@ jobs:
     runs-on: Windows
     steps:
     - name: Task1
-      shell: cmd
-      run: timeout 30
+      uses: juliangruber/sleep-action@v1
+      with:
+        time: 30s
     - name: Wait for a Message
       uses: soda480/wait-for-message-action@wait-composite
       with:
@@ -14,4 +15,6 @@ jobs:
         message: "ready to proceed"
         timeout: 120
     - name: Task2
-      run: timeout 30
+      uses: juliangruber/sleep-action@v1
+      with:
+        time: 30s
