--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ jobs:
     get-windows-ip-address:
         runs-on: windows-latest
         outputs:
-            ip-address: ${{ steps.windows-ip-address.output.ip_address }}
+            ip-address: ${{ steps.windows-ip-address.outputs.ip_address }}
         steps:
             - name: Get Windows IP address
               id: windows-ip-address
@@ -16,7 +16,7 @@ jobs:
     get-linux-ip-address:
         runs-on: ubuntu-20.04
         outputs:
-            ip-address: ${{ steps.linux-ip-address.output.ip_address }}
+            ip-address: ${{ steps.linux-ip-address.outputs.ip_address }}
         steps:
             - name: Get Linux IP address
               id: linux-ip-address
