--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,18 +5,19 @@ jobs:
     get-windows-ip-address:
         runs-on: windows-latest
         outputs:
-            ip-address: ${{ steps.windows-ip-address.outputs.ip_address }}
+            windows-ip-address: ${{ steps.windows-ip-address.outputs.ip_address }}
         steps:
             - name: Get Windows IP address
               id: windows-ip-address
               shell: cmd
-              run:
+              run: |
+                python -c "import socket;print(f'ip_address={socket.gethostbyname(socket.gethostname())}')"
                 python -c "import socket;print(f'ip_address={socket.gethostbyname(socket.gethostname())}')" >> $GITHUB_OUTPUT
 
     get-linux-ip-address:
         runs-on: ubuntu-20.04
         outputs:
-            ip-address: ${{ steps.linux-ip-address.outputs.ip_address }}
+            linux-ip-address: ${{ steps.linux-ip-address.outputs.ip_address }}
         steps:
             - name: Get Linux IP address
               id: linux-ip-address
@@ -30,7 +31,7 @@ jobs:
         steps:
             - name: Echo Linux IP
               run:
-                echo ${{ needs.get-linux-ip-address.outputs.ip-address }}
+                echo ${{ needs.get-linux-ip-address.outputs.linux-ip-address }}
 
     linux-workflow:
         runs-on: ubuntu-20.04
@@ -38,4 +39,4 @@ jobs:
         steps:
             - name: Echo Windows IP
               run: 
-                echo ${{ needs.get-windows-ip-address.outputs.ip-address }}
+                echo ${{ needs.get-windows-ip-address.outputs.windows-ip-address }}
