--- a/.github/workflows/testip.yml
+++ b/.github/workflows/testip.yml
@@ -1,7 +1,9 @@
 name: test-with-output
 on: push
 jobs:
-  get_windows_ip:
+
+  windows_get_windows_ip:
+    name: Get Windows IP
     runs-on: Windows
     outputs:
       windows_ip: ${{ steps.get_ip.outputs.windows_ip }}
@@ -14,7 +16,9 @@ jobs:
         with:
           name: windows_ip_address_file
           path: windows_ip_address.txt
-  get_linux_ip:
+  
+  linux_get_linux_ip:
+    name: Get Linux IP
     runs-on: Linux
     outputs:
       linux_ip: ${{ steps.get_ip.outputs.linux_ip }}
@@ -23,18 +27,39 @@ jobs:
         id: get_ip
         run: |
           python -c "import socket;print(f'linux_ip={socket.gethostbyname(socket.gethostname())}')" >> $GITHUB_OUTPUT
-  windows_workflow:
-    name: Windows Workflow
+
+  windows_wait_linux_ready:
+    name: Wait Linux Ready
     runs-on: Windows
-    needs: get_linux_ip
     steps:
-      - name: Echo Linux IP
-        run:
-          echo "${{ needs.get_linux_ip.outputs.linux_ip }}"
-  linux_workflow:
-    name: Linux Workflow
+      - name: Wait for Linux server to be ready
+        uses: soda480/wait-for-message-action@wait-composite
+        with:
+          port: 8080
+          message: "Linux server is ready"
+          shell: cmd
+
+  windows_install_app:
+    name: Install App
+    runs-on: Windows
+    needs: windows_wait_linux_ready
+    steps:
+    - name: Install App Task
+      run: Start-Sleep -s 30
+      shell: powershell
+
+  linux_build_app:
+    name: Build App
     runs-on: Linux
-    needs: get_windows_ip
+    steps:
+    - name: Build App Task
+      run: sleep 60
+      shell: bash
+
+  linux_send_linux_ready:
+    name: Send Linux Ready
+    runs-on: Linux
+    needs: [get_windows_ip, linux_build_app]
     steps:
       - uses: actions/download-artifact@v3
         with:
@@ -43,5 +68,10 @@ jobs:
         id: read_ip_address
         run: |
           cat windows_ip_address.txt >> $GITHUB_OUTPUT
-      - name: Echo Windows IP
-        run: echo ${{ steps.read_ip_address.outputs.windows_ip }}
+      - name: Send Linux server is ready message
+        uses: soda480/wait-for-message-action@send-composite
+        with:
+          ip: ${{ steps.read_ip_address.outputs.windows_ip }}
+          port: 8080
+          message: "Linux server is ready"
+          shell: bash
