--- a/.github/workflows/testwf2.yml
+++ b/.github/workflows/testwf2.yml
@@ -3,7 +3,7 @@ on: workflow_dispatch
 jobs:
 
   get_windows_ip:
-    name: W- Get Windows IP
+    name: Get Windows IP
     runs-on: Windows
     steps:
     - name: Get Windows IP
@@ -16,7 +16,7 @@ jobs:
         path: windows_ip_address.txt
 
   get_linux_ip:
-    name: L- Get Linux IP
+    name: Get Linux IP
     runs-on: Linux
     outputs:
       linux_ip: ${{ steps.get_ip.outputs.linux_ip }}
