--- a/.github/workflows/testsync2.yml
+++ b/.github/workflows/testsync2.yml
@@ -32,8 +32,9 @@ jobs:
     needs: get_linux_ip
     steps:
     - name: Wait for Linux server to be ready
-      uses: soda480/wait-for-message-action@wait-composite
+      uses: soda480/wait-for-message-action@main
       with:
+        command: "wait"
         port: 8080
         timeout: 120
         message: "Linux server is ready"
@@ -42,8 +43,9 @@ jobs:
       run: Start-Sleep -s 30
       shell: powershell
     - name: Send Windows server is ready message
-      uses: soda480/wait-for-message-action@send-composite
+      uses: soda480/wait-for-message-action@main
       with:
+        command: "send"
         ip: ${{ needs.get_linux_ip.outputs.linux_ip }}
         port: 8080
         delay: 5
@@ -67,8 +69,9 @@ jobs:
       run: |
         cat windows_ip_address.txt >> $GITHUB_OUTPUT
     - name: Send Linux server is ready message
-      uses: soda480/wait-for-message-action@send-composite
+      uses: soda480/wait-for-message-action@main
       with:
+        command: "send"
         ip: ${{ steps.read_ip_address.outputs.windows_ip }}
         port: 8080
         delay: 10
@@ -76,8 +79,9 @@ jobs:
         message: "Linux server is ready"
         shell: bash
     - name: Wait for Windows server to be ready message
-      uses: soda480/wait-for-message-action@wait-composite
+      uses: soda480/wait-for-message-action@main
       with:
+        command: "wait"
         port: 8080
         timeout: 120
         message: "Windows server is ready"
