--- a/.github/workflows/testsync.yml
+++ b/.github/workflows/testsync.yml
@@ -34,8 +34,9 @@ jobs:
     needs: get_linux_ip
     steps:
     - name: Wait for Linux server to be ready
-      uses: soda480/wait-for-message-action@wait-composite
+      uses: soda480/wait-for-message-action@main
       with:
+        command: "wait"
         port: 8080
         timeout: 120
         message: "Linux server is ready"
@@ -56,8 +57,9 @@ jobs:
     needs: [get_linux_ip, install_app]
     steps:
     - name: Send Windows server is ready message
-      uses: soda480/wait-for-message-action@send-composite
+      uses: soda480/wait-for-message-action@main
       with:
+        command: "send"
         ip: ${{ needs.get_linux_ip.outputs.linux_ip }}
         port: 8080
         delay: 5
@@ -87,8 +89,9 @@ jobs:
       run: |
         cat windows_ip_address.txt >> $GITHUB_OUTPUT
     - name: Send Linux server is ready message
-      uses: soda480/wait-for-message-action@send-composite
+      uses: soda480/wait-for-message-action@main
       with:
+        command: "send"
         ip: ${{ steps.read_ip_address.outputs.windows_ip }}
         port: 8080
         delay: 10
@@ -102,8 +105,9 @@ jobs:
     needs: send_linux_ready
     steps:
     - name: Wait for Windows server to be ready message
-      uses: soda480/wait-for-message-action@wait-composite
+      uses: soda480/wait-for-message-action@main
       with:
+        command: "wait"
         port: 8080
         timeout: 120
         message: "Windows server is ready"
