--- a/.github/workflows/ip.yml
+++ b/.github/workflows/ip.yml
@@ -8,18 +8,19 @@ jobs:
     runs-on: Windows
     # outputs:
     #   windows_ip: ${{ steps.get_ip.outputs.windows_ip }}
-
     steps:
     - name: Get Windows IP
       id: get_ip
       run: |
         python -c "import socket;a=('8.8.8.8', 80);s=socket.socket(socket.AF_INET, socket.SOCK_DGRAM);s.connect(a);print(f'windows_ip={s.getsockname()[0]}')" >> windows_ip_address.txt
-
     - uses: actions/upload-artifact@v3
       with:
         name: windows_ip_address_file
         path: windows_ip_address.txt
 
+  show_windows_ip:
+    name: Show Windows IP
+    runs-on: Linux
     - uses: actions/download-artifact@v3
       with:
         name: windows_ip_address_file
