--- a/.github/workflows/ip.yml
+++ b/.github/workflows/ip.yml
@@ -22,6 +22,7 @@ jobs:
     name: Show Windows IP
     needs: get_windows_ip
     runs-on: Linux
+    steps:
     - uses: actions/download-artifact@v3
       with:
         name: windows_ip_address_file
