--- a/.github/workflows/ip.yml
+++ b/.github/workflows/ip.yml
@@ -28,7 +28,7 @@ jobs:
       id: get_ip
       run: |
         value=$( hostname -I | awk {'print $1'} )
-        echo "linu_ip=$value" >> $GITHUB_OUTPUT
+        echo "linux_ip=$value" >> $GITHUB_OUTPUT
 
   show_windows_ip:
     name: Show Windows IP
@@ -49,7 +49,6 @@ jobs:
     - name: Show Windows IP
       run: |
         echo "${{ steps.read_ip_address.outputs.windows_ip }}"
-
 
   show_linux_ip:
     name: Show Linux IP
