--- a/.github/workflows/ip.yml
+++ b/.github/workflows/ip.yml
@@ -31,7 +31,7 @@ jobs:
         echo "linux_ip=$value" >> $GITHUB_OUTPUT
 
   show_windows_ip:
-    name: Show Windows IP
+    name: Show Windows IP on Linux
     needs: get_windows_ip
     runs-on: Linux
     steps:
