--- a/.github/workflows/ip.yml
+++ b/.github/workflows/ip.yml
@@ -11,9 +11,9 @@ jobs:
     steps:
     - name: Get Windows IP
       id: get_ip
-      shell: cmd
+      shell: powershell
       run: |
-        python -c "import socket;a=('8.8.8.8', 80);s=socket.socket(socket.AF_INET, socket.SOCK_DGRAM);s.connect(a);print(f'windows_ip={s.getsockname()[0]}')" >> $GITHUB_OUTPUT
+        python -c "import socket;a=('8.8.8.8', 80);s=socket.socket(socket.AF_INET, socket.SOCK_DGRAM);s.connect(a);print(f'windows_ip={s.getsockname()[0]}')" | Out-File -FilePath $Env:GITHUB_OUTPUT -Encoding utf8 -Append
     # - uses: actions/upload-artifact@v3
     #   with:
     #     name: windows_ip_address_file
